<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:textSize="24sp"
            android:text = "@string/finish"/>

    </LinearLayout>